--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 128
 
 [*.{js, conf, json}]
 charset = utf-8
